fix: prevent pseudo element hover effect on mobile
Resolved an issue where pseudo elements were visible on mobile upon clicking. Moved the pseudo ::before and ::after styles into a media query to ensure they only appear on larger screens without a hamburger menu.

--- a/src/components/LanguageButton/LanguageButton.module.scss
+++ b/src/components/LanguageButton/LanguageButton.module.scss
@@ -7,6 +7,23 @@
 	color: $txt-light-50;
 	cursor: pointer;
 
+	.highlight {
+		color: $txt-highlight-50;
+	}
+
+	&:hover {
+		.languageEN::after {
+			opacity: 1;
+			transition: opacity 0.3;
+		}
+		.languageDE::before {
+			opacity: 1;
+			transition: opacity 0.3;
+		}
+	}
+}
+
+@include breakpoint(l, min) {
 	.languageEN::after {
 		content: '<';
 		opacity: 0;
@@ -23,20 +40,5 @@
 		margin-right: 30px;
 		color: $txt-highlight-100;
 		transition: opacity 0.3s;
-	}
-
-	.highlight {
-		color: $txt-highlight-50;
-	}
-
-	&:hover {
-		.languageEN::after {
-			opacity: 1;
-			transition: opacity 0.3;
-		}
-		.languageDE::before {
-			opacity: 1;
-			transition: opacity 0.3;
-		}
 	}
 }
